--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -10,7 +10,8 @@
   </div>
   <div class="col-12">
     <!-- gifs -->
-    2
+    <!-- card-list -->
+  <gifs-card-list ></gifs-card-list>
   </div>
 
 </div>
