--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -6,6 +6,6 @@
 
   <div class="list-group list-reset"></div>
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">VALORANT</button>
+    <button *ngFor="let tag of tags"   class="list-group-item list-group-item-action">{{tag | titlecase}}</button>
   </div>
 </div>
