--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -11,7 +11,7 @@
   <div class="col-12">
     <!-- gifs -->
     <!-- card-list -->
-  <gifs-card-list ></gifs-card-list>
+  <gifs-card-list [gifs]="gifs"></gifs-card-list>
   </div>
 
 </div>
