--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,38 +1,7 @@
 <div class="row">
 
-  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
-
-    <div class="card mb-2 text-center bg-dark ">
-
-      <!-- TODO: crear imagen -->
-      <img [src]=" gif.images.downsized_medium.url">
-
-      <div class="card-body text-white">
-        <p class="card-text">
-          {{gif.title}}
-        </p>
-      </div>
-
-    </div>
-
-  </div>
-
-  <div class="col-md-3 col-sm-6">
-
-    <div class="card mb-2 text-center bg-dark ">
-
-      <!-- TODO: crear imagen -->
-
-      <div class="card-body text-white">
-        <p class="card-text">
-          Hola mundo
-        </p>
-      </div>
-
-    </div>
-
-  </div>
-
-
+ <gifs-card
+ *ngFor="let gif of gifs"
+  [gif]="gif"></gifs-card>
 
 </div>
