--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -6,6 +6,11 @@
 
   <div class="list-group list-reset"></div>
   <div class="list-group list-reset">
-    <button *ngFor="let tag of tags"   class="list-group-item list-group-item-action">{{tag | titlecase}}</button>
+    <button
+    *ngFor="let tag of tags"
+    (click)="searchTag(tag)"
+    class="list-group-item list-group-item-action"
+    >{{tag | titlecase}}</button>
+
   </div>
 </div>
