--- a/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -1,11 +1,15 @@
 
+<shared-lazy-image></shared-lazy-image>
+
+
 <div class="card mb-2 text-center bg-dark">
   <!-- TODO: crear imagen -->
+
   <img [src]="gif.images.downsized_medium.url" />
 
   <div class="card-body text-white">
     <p class="card-text">
-      {{ gif.title }}
+      {{ gif.title || "no title"}}
     </p>
   </div>
 </div>
