--- a/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -1,17 +1,21 @@
 
-<shared-lazy-image></shared-lazy-image>
+
 
 
 <div class="card mb-2 text-center bg-dark">
   <!-- TODO: crear imagen -->
+  <shared-lazy-image
+[url]="gif.images.downsized_medium.url"
+[alt]="gif.title || 'no title' "
+></shared-lazy-image>
 
-  <img [src]="gif.images.downsized_medium.url" />
+  <!-- <img [src]="gif.images.downsized_medium.url" /> -->
 
-  <div class="card-body text-white">
+  <!-- <div class="card-body text-white">
     <p class="card-text">
       {{ gif.title || "no title"}}
     </p>
-  </div>
+  </div> -->
 </div>
 
 <div class="col-md-3 col-sm-6">
